[package]
name = "pivot_saw"
version = "0.1.0"
edition = "2024"
authors = ["Mathieu Roget <mathieu.roget@ens-lyon.org>"]
keywords = ["math", "SAW", "pivot", "random", "walk"]
description = "This crate provides an implementation of the pivot alorithm."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mroget/PivotSAW"
homepage = "https://github.com/mroget/PivotSAW"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pivot"
harness = false


[dependencies]
num-traits = "0.2.19"
rand = "0.10.0"
tqdm = "0.8.0"
